--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngx-translate/core": "^7.2.0",
     "@ngx-translate/http-loader": "^1.0.2",
     "@types/materialize-css": "^0.100.0",
+    "angular2-materialize": "^15.1.9",
     "core-js": "^2.4.1",
     "materialize-css": "^0.100.1",
     "rxjs": "^5.4.1",
